--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,7 +22,7 @@ main a{
     height: 300px;
 }
 #apiimage2{
-    background-image: url("");
+    background-image: url("https://thumbs.dreamstime.com/b/international-business-world-flags-globe-travel-services-management-concept-vector-eps-54034810.jpg");
     background-color: bisque;
     background-position: center;
     background-size: cover;
