Api 3 in progress

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,7 +30,7 @@ main a{
     height: 300px;
 }
 #apiimage3{
-    background-image: url("");
+    background-image: url("https://d31dn7nfpuwjnm.cloudfront.net/images/valoraciones/0041/4571/tarjetas-credito-no-de-bancos.jpg?1609245238");
     background-color: bisque;
     background-position: center;
     background-size: cover;
